--- a/index.html
+++ b/index.html
@@ -2,86 +2,66 @@
 <html>
   <head>
 
-    <!-- Set the style of the table -->
+    <!-- my fonts are below -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+Unicase">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli:300i,400">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
-    <style>
-      body{
-        color: inherit;
-        font-family: 'Open Sans', sans-serif;
-      }
-      table, th, td{
-        border: 2px solid #01426a;
-        border-collapse: collapse;
-        padding: 15px;
-        text-align: center;
-        vertical-align: middle;
-        color: #01426a
-      }
-      th  {
-        background-color: #ece81a
-      }
-      tr:hover {background-color: #ece81a}
-    </style>
+
   </head>
-
   <body>
 
     <div>
-      <h1>Anissa's Page!</h1>
+      <h1>Anissa's Website!
+        </h1>
+      <h2> Scroll to read all about me! </h2>
+
+      <ul>
+        <a href="#biography"><li> biography </li> </a>
+        <a href="#funfacts"><li> funfacts </li> </a>
+        <a href = "#likesanddislikes"><li> likes and dislikes </li> </a>
+        <a href= "#favoritewebpage"> <li> favorite webpage </li> </a>
+        <a href= "#scratchgame"><li> my scratch game </li> </a>
+      </u1>
     </div>
 
-    <!-- Table starts here-->
-    <div style ="overflow-x:auto;">
-      <table style="width:90%; margin:1em auto">
 
-        <!-- Define the first row of the table -->
-        <tr>
-          <th>Core4 Concept</th>
-          <th>Technical Definition</th>
-          <th>Real-Life Analogy</th>
-          <th>Python Example</th>
-          <th>Scratch Example</th>
-        </tr>
 
-        <!-- Fill in the row for Variables -->
-        <tr>
-        <td><b>Variables</b></td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-        </tr>
+    <div id="biography">
+      <h2>Biography </h2>
+      <p>
+       Hello! My name is Anissa. I am a rising junior at Sacred Heart in Greenwich. I will turn 16 this decemeber and finally start driving! I am the youngest in my grade, so I am eagarly awaiting my birthday. I love running, coding and writing and designing my school newspaper. I am one of three sisters and one male dog. I have a apricot cockapoo named Teddy. He is an international sensation. Follow his <a href=https://www.instagram.com/the.teddygram/> instagram here. </a>
+      </p>
 
-        <!-- Fill in the row for Loops -->
-        <tr>
-          <td><b>Loops</b></td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-        </tr>
-
-        <!-- Fill in the row for Conditionals -->
-        <tr>
-          <td><b>Conditionals</b></td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-        </tr>
-
-        <!-- Fill in the row for Functions -->
-        <tr>
-          <td><b>Functions</b></td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-        </tr>
-
-      </table>
     </div>
+
+
+
+    <div id="funfacts">
+      <h2>Fun Facts </h2>
+    </div>
+
+    <div id="likesanddislikes">
+      <h2>Likes and Dislikes </h2>
+    </div>
+
+    <div id="favoritewebpage">
+      <h2>Favorite Webpage </h2>
+    </div>
+
+    <div id="scratchgame">
+      <h2> My Scrath Game </h2>
+    </div>
+
+    <div id="scrathgame"> </div>
+
+
+
+
+
+
 
   </body>
 </html>
