tried to add an image background

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
 
     <!-- my fonts are below -->
+    <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+Unicase">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli:300i,400">
@@ -14,9 +16,11 @@
   <body>
 
     <div>
-      <h1>Anissa's Website!
+      <div id="home-banner">
+      </div>
+      <h1>Anissa Arakal
         </h1>
-      <h2> Scroll to read all about me! </h2>
+      <h2> scroll to learn all about me </h2>
 
       <ul>
         <a href="#biography"><li> biography </li> </a>
