--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
   </head>
   <body>
-
+    <button id="changeBackground" type="button">></button>
     <div>
+
       <div id="home-banner">
       </div>
       <h1>Anissa Arakal
@@ -59,11 +60,12 @@
 
     <div id="scrathgame"> </div>
 
+    <script type="text/javascript">
+        document.getElementById("changeBackground").onclick = function(){
+          document.getElementById("home-banner").style.backgroundImage = "url('background2.jpg')";
+        };
 
-
-
-
-
+    </script>
 
   </body>
 </html>
