fixed top bar, linking, and fonts and colors

--- a/index.html
+++ b/index.html
@@ -6,40 +6,37 @@
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+Unicase">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli:300i,400">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arapey:400i" >
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 
   </head>
   <body>
-    <button id="changeBackground" type="button">></button>
     <div>
-
       <div id="home-banner">
-      </div>
-      <h1>Anissa Arakal
+        <h1 id="myname">Anissa Arakal
         </h1>
-      <h2> scroll to learn all about me </h2>
+        <button id="changeBackground" type="button">></button>
+      </div>
 
-      <ul>
-        <a href="#biography"><li> biography </li> </a>
+      <ul id="nav">
+        <a href="#whoAmI"><li> Who am I? </li> </a>
         <a href="#funfacts"><li> funfacts </li> </a>
         <a href = "#likesanddislikes"><li> likes and dislikes </li> </a>
-        <a href= "#favoritewebpage"> <li> favorite webpage </li> </a>
-        <a href= "#scratchgame"><li> my scratch game </li> </a>
+        <a href= "#My Code"> <li> My Code </li> </a>
+        <a href= "#Photo Gallery"><li> Photo Gallery </li> </a>
       </u1>
     </div>
 
-    <div id="biography">
-      <h2>Biography </h2>
-      <p>
-       Hello! My name is Anissa. I am a rising junior at Sacred Heart in Greenwich. I will turn 16 this decemeber and finally start driving! I am the youngest in my grade, so I am eagarly awaiting my birthday. I love running, coding and writing and designing my school newspaper. I am one of three sisters and one male dog. I have a apricot cockapoo named Teddy. He is an international sensation. Follow his <a href=https://www.instagram.com/the.teddygram/> instagram here. </a>
-      </p>
-
+    <div id="whoAmI">
+      <h2> Who am I? </h2>
+      <p> Hello! My name is Anissa. I am a rising junior at Sacred Heart Greenwich.</p>
+      <p> My family includes my two sisters, mom, dad, and dog. </p>
+      <p>  I am the oldest sibling out of my two sisters, Karina and Natasha. </p>
+      <p> I have an adorable cockapoo named Teddy.  Follow his <a href=https://www.instagram.com/the.teddygram/> instagram here. </a>  </p>
     </div>
-
 
 
     <div id="funfacts">
@@ -50,15 +47,14 @@
       <h2>Likes and Dislikes </h2>
     </div>
 
-    <div id="favoritewebpage">
-      <h2>Favorite Webpage </h2>
+    <div id="My code">
+      <h2>My Code </h2>
     </div>
 
-    <div id="scratchgame">
-      <h2> My Scrath Game </h2>
+    <div id="Photo Gallery">
+      <h2> Photo Gallery </h2>
     </div>
 
-    <div id="scrathgame"> </div>
 
     <script type="text/javascript">
         document.getElementById("changeBackground").onclick = function(){
