--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h1 id="myname">Anissa Arakal
         </h1>
         <button id="changeBackground" type="button">></button>
+        <button id="changeBackgroundBack" type="button"><</button>
       </div>
 
       <ul id="nav">
@@ -32,19 +33,40 @@
 
     <div id="whoAmI">
       <h2> Who am I? </h2>
+      <img id="skyline" src = "skyline.PNG">
       <p> Hello! My name is Anissa. I am a rising junior at Sacred Heart Greenwich.</p>
       <p> My family includes my two sisters, mom, dad, and dog. </p>
       <p>  I am the oldest sibling out of my two sisters, Karina and Natasha. </p>
       <p> I have an adorable cockapoo named Teddy.  Follow his <a href=https://www.instagram.com/the.teddygram/> instagram here. </a>  </p>
+      <img id="sistersPic"src = "sisters.jpg">
+      <img id="teddyPic" src= "teddy.jpg">
+      <img id ="familyPic" src = "family.jpg">
     </div>
 
 
     <div id="funfacts">
       <h2>Fun Facts </h2>
+    <p> Some fun facts about me are that I move approximarty every 3-4 years.</p>
+    <p> I have always had access to the ocean, and I have never lived in a place that was not on the coast. </p>
+    <p> I am a very heavy sleeper. </p>
+
+
     </div>
 
     <div id="likesanddislikes">
       <h2>Likes and Dislikes </h2>
+      <ul>
+      <p> I love running on my highschool Cross Country team during the fall. </p> <img id=XClegs src="XClegsUp.PNG" ALIGN = right>
+      <p> I also enjoy working on formating my schools literary magezine, Perspectives, as Co-Layout Editor.</p>
+      <p> I like writing articles for my schools student-run newspaper, <a href=http://schoolpress.cshgreenwich.org/kingstreetchronicle//> the King Street Chronicle. </a> </p>
+      <p> I love food of everytype (but not papaya), my family, friends, and home. </p>
+      <p> I love the beach near my house during all the seasons. </p>
+      <p> I love photography and capturing pictures of people in their daily lives. </p>
+      <p>Check out the   <a href= "#Photo Gallery">  photo gallery  </a> portion of my page to see some of my most recent projects. </p>
+      <p>                                            </p>
+      <p>                                            </p>
+      <p> Something I dont like include: walking to the bus in the cold, being late, tea and spiders. </p>
+    </ul>
     </div>
 
     <div id="My code">
@@ -59,6 +81,9 @@
     <script type="text/javascript">
         document.getElementById("changeBackground").onclick = function(){
           document.getElementById("home-banner").style.backgroundImage = "url('background2.jpg')";
+
+          document.getElementById("changeBackgroundBack").onclick = function(){
+            document.getElementById("url('background2.jpg')").style.backgroundImage = "home-banner";
         };
 
     </script>
