--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <h1 id="myname">Anissa Arakal
         </h1>
         <button id="changeBackground" type="button">></button>
-        <button id="changeBackgroundBack" type="button"><</button>
       </div>
 
       <ul id="nav">
@@ -33,7 +32,6 @@
 
     <div id="whoAmI">
       <h2> Who am I? </h2>
-      <img id="skyline" src = "skyline.PNG">
       <p> Hello! My name is Anissa. I am a rising junior at Sacred Heart Greenwich.</p>
       <p> My family includes my two sisters, mom, dad, and dog. </p>
       <p>  I am the oldest sibling out of my two sisters, Karina and Natasha. </p>
@@ -41,6 +39,7 @@
       <img id="sistersPic"src = "sisters.jpg">
       <img id="teddyPic" src= "teddy.jpg">
       <img id ="familyPic" src = "family.jpg">
+      <img id="skyline" src = "skyline.PNG">
     </div>
 
 
@@ -49,6 +48,8 @@
     <p> Some fun facts about me are that I move approximarty every 3-4 years.</p>
     <p> I have always had access to the ocean, and I have never lived in a place that was not on the coast. </p>
     <p> I am a very heavy sleeper. </p>
+    <p> I love listening to music while I ride the bus to school, do my homework, run, and sleep.</p>
+    <p> check out my spotify playlist below </p>
 
 
     </div>
@@ -56,7 +57,7 @@
     <div id="likesanddislikes">
       <h2>Likes and Dislikes </h2>
       <ul>
-      <p> I love running on my highschool Cross Country team during the fall. </p> <img id=XClegs src="XClegsUp.PNG" ALIGN = right>
+      <p> I love running on my highschool Cross Country team during the fall and Track during the spring. </p> <img id=XClegs src="XClegsUp.PNG" ALIGN = right>
       <p> I also enjoy working on formating my schools literary magezine, Perspectives, as Co-Layout Editor.</p>
       <p> I like writing articles for my schools student-run newspaper, <a href=http://schoolpress.cshgreenwich.org/kingstreetchronicle//> the King Street Chronicle. </a> </p>
       <p> I love food of everytype (but not papaya), my family, friends, and home. </p>
@@ -71,6 +72,8 @@
 
     <div id="My code">
       <h2>My Code </h2>
+          <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/168595724/?autostart=false" frameborder="10" allowfullscreen></iframe>
+
     </div>
 
     <div id="Photo Gallery">
@@ -80,10 +83,7 @@
 
     <script type="text/javascript">
         document.getElementById("changeBackground").onclick = function(){
-          document.getElementById("home-banner").style.backgroundImage = "url('background2.jpg')";
-
-          document.getElementById("changeBackgroundBack").onclick = function(){
-            document.getElementById("url('background2.jpg')").style.backgroundImage = "home-banner";
+          document.getElementById("home-banner").style.backgroundImage = "url('background3.jpg')";
         };
 
     </script>
