--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#whoAmI"><li> Who am I? </li> </a>
         <a href="#funfacts"><li> funfacts </li> </a>
         <a href = "#likesanddislikes"><li> likes and dislikes </li> </a>
-        <a href= "#My Code"> <li> My Code </li> </a>
+        <a href= "#MyCode"> <li> My Code </li> </a>
         <a href= "#Photo Gallery"><li> Photo Gallery </li> </a>
       </u1>
     </div>
@@ -46,10 +46,13 @@
     <div id="funfacts">
       <h2>Fun Facts </h2>
     <p> Some fun facts about me are that I move approximarty every 3-4 years.</p>
+      <iframe src="https://open.spotify.com/embed?uri=spotify:user:anissa.arakal:playlist:0btS8YAsHPyg2XSG8WmG82" width="300" height="380" frameborder="20" allowtransparency="true" ALIGN = "right"  >
+      </iframe>
     <p> I have always had access to the ocean, and I have never lived in a place that was not on the coast. </p>
     <p> I am a very heavy sleeper. </p>
     <p> I love listening to music while I ride the bus to school, do my homework, run, and sleep.</p>
     <p> check out my spotify playlist below </p>
+
 
 
     </div>
@@ -70,9 +73,9 @@
     </ul>
     </div>
 
-    <div id="My code">
+    <div id="MyCode">
       <h2>My Code </h2>
-          <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/168595724/?autostart=false" frameborder="10" allowfullscreen></iframe>
+          <iframe id="Revenge" allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/168595724/?autostart=false" frameborder="10" allowfullscreen></iframe>
 
     </div>
 
