--- a/index.html
+++ b/index.html
@@ -14,12 +14,43 @@
 
   </head>
   <body>
+    <div class="slideshow-container">
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="background3.jpg" style="width:100%">
+    <div class="text"> "Waving" at Tods Point </div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="background2.jpg" style="width:100%">
+    <div class="text">"rocky shores" at Montana de Oro</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="background1.jpg" style="width:100%">
+    <div class="text">"cloudy pallette" at Tods Point</div>
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
     <div>
       <div id="home-banner">
         <h1 id="myname">Anissa Arakal
         </h1>
         <button id="changeBackground" type="button">></button>
       </div>
+
 
       <ul id="nav">
         <a href="#whoAmI"><li> Who am I? </li> </a>
@@ -29,6 +60,8 @@
         <a href= "#Photo Gallery"><li> Photo Gallery </li> </a>
       </u1>
     </div>
+
+    <div id='box'></div>
 
     <div id="whoAmI">
       <h2> Who am I? </h2>
@@ -85,9 +118,23 @@
 
 
     <script type="text/javascript">
-        document.getElementById("changeBackground").onclick = function(){
-          document.getElementById("home-banner").style.backgroundImage = "url('background3.jpg')";
-        };
+        // document.getElementById("changeBackground").onclick = function(){
+        //   document.getElementById("home-banner").style.backgroundImage = "url('background3.jpg')";
+        // }
+        var slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex> slides.length) {slideIndex = 1}
+            slides[slideIndex-1].style.display = "block";
+            setTimeout(showSlides, 3000); // Change image every 2 seconds
+        }
 
     </script>
 
