fix bugs and spotify

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="funfacts">
       <h2>Fun Facts </h2>
     <p> Some fun facts about me are that I move approximarty every 3-4 years.</p>
-      <iframe src="https://open.spotify.com/embed?uri=spotify:user:anissa.arakal:playlist:0btS8YAsHPyg2XSG8WmG82" width="300" height="380" frameborder="20" allowtransparency="true" ALIGN = "right"  >
+      <iframe id = "spotify" src="https://open.spotify.com/embed?uri=spotify:user:anissa.arakal:playlist:0btS8YAsHPyg2XSG8WmG82&theme=white" width="300" height="380" frameborder="300px" allowtransparency="true" ALIGN = "right"  >
       </iframe>
     <p> I have always had access to the ocean, and I have never lived in a place that was not on the coast. </p>
     <p> I am a very heavy sleeper. </p>
