--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <img id="sistersPic"src = "sisters.jpg">
       <img id="teddyPic" src= "teddy.jpg">
       <img id ="familyPic" src = "family.jpg">
-      <img id="skyline" src = "skyline.PNG">
+      <img id="skyline" src = "panoTods.PNG">
     </div>
 
 
